--- a/src/content/posts/ssl-beanstalk-single-instance.mdx
+++ b/src/content/posts/ssl-beanstalk-single-instance.mdx
@@ -29,7 +29,10 @@ Well, that’s mildly annoying 😒 but don’t worry we can still provision a f
 
 The first step is to say goodbye to your load balancer. Convert your instance type to `single instance` from “load balanced.” You can do this from the _Capacity_ tab inside _Configurations_. Just choose single instance in the environment type and that’s it.
 
-![Elastic Beanstalk Configuration Tab](/static/post-images/ssl-beanstalk-single-instance/beanstalk-config-screen.png)
+<img
+  src="/static/post-images/ssl-beanstalk-single-instance/beanstalk-config-screen.png"
+  alt="Elastic Beanstalk Configuration Tab"
+/>
 
 ## 2. Certbot
 
@@ -139,6 +142,9 @@ Now all you have to do is deploy your code to Elastic Beanstalk. Make sure that 
 
 > Aaand Voilà!!! **A+** rating for your very own, free of cost SSL Certificate. You can test your SSL certificate at [ssllabs.com](https://www.ssllabs.com/ssltest/).
 
-![nuff’ said 😎😎😎](/static/post-images/ssl-beanstalk-single-instance/ssl-cert-results.png)
+<img
+  src="/static/post-images/ssl-beanstalk-single-instance/ssl-cert-results.png"
+  alt="SSL Certificate Results"
+/>
 
 ---
