added the blog image component for all blogs

--- a/src/content/posts/create-first-aws-billing-alarm.mdx
+++ b/src/content/posts/create-first-aws-billing-alarm.mdx
@@ -11,6 +11,8 @@ tags:
   - sns
 ---
 
+import { BlogImage } from "../../components/blog";
+
 Whether you’re a novice, just starting or a highly skilled AWS ninja, you need to keep an eye on those pesky AWS bills. AWS Billing is a very important and sometimes confusing part of AWS and if left unchecked can cause a lot of damage.
 
 AWS gives a one-year free trial and there are a lot of great tutorials out there, enabling young devs to get started in no time. However, before getting started, it is strongly recommended that you set up a billing alarm to avoid any unnecessary costs.
@@ -25,7 +27,13 @@ Good question! Billing Alarm is a limit that you can set and AWS console lets yo
 
 Assuming you are logged into the console. Click on your **username** in the top right bar and select the **Billing Dashboard**. Alternately, you can also search for **billing** in the search bar, on the main page. On the left tab, under the **Preferences** section click **Billing preferences**.
 
-![Preference Screen - AWS Console](/static/post-images/first-aws-billing-alarm/billing-preferences.png)
+<BlogImage
+  client:load
+  extendWidth
+  alt="Preference Screen - AWS Console"
+  caption="Preference Screen - AWS Console"
+  src="/static/post-images/first-aws-billing-alarm/billing-preferences.png"
+/>
 
 Check **Receive Billing Alerts** and press **Save Preferences**.
 
@@ -44,7 +52,13 @@ The **Create Alarm** button will take you to a setup wizard. There are four step
 
 In the first step, you can add the alarm’s name, currency, and conditions that trigger the alarm.
 
-![Specify Metrics - AWS Console](/static/post-images/first-aws-billing-alarm/billing-specify-metrics.png)
+<BlogImage
+  client:load
+  extendWidth
+  alt="Specify Metrics - AWS Console"
+  caption="Specify Metrics - AWS Console"
+  src="/static/post-images/first-aws-billing-alarm/billing-specify-metrics.png"
+/>
 
 In the second step, you can configure when the alarm is triggered and who it goes
 out to. To define who receives the notification, you will need to create or choose
@@ -57,9 +71,16 @@ Complete the following steps;
 3.  Add your email address. You can add multiple email addresses separated by commas (,)
 4.  Press **Create topic**
 
-![Creating SNS Topic - AWS Console](/static/post-images/first-aws-billing-alarm/billing-sns-topic.png)
+<BlogImage
+  client:load
+  extendWidth
+  alt="Creating SNS Topic - AWS Console"
+  caption="Creating SNS Topic - AWS Console"
+  src="/static/post-images/first-aws-billing-alarm/billing-sns-topic.png"
+/>
 
 In the third step just add a unique name and description (optional) for the alarm.
+This is so you can recognize the alarm easily among others you may create in the
 This is so you can recognize the alarm easily among others you may create in the
 future.
 
