--- a/src/content/posts/serverless-apis-on-the-go.mdx
+++ b/src/content/posts/serverless-apis-on-the-go.mdx
@@ -63,6 +63,7 @@ Now, it’s easy to get confused between Serverless Architecture and Framework. 
 In our particular case serverless manages the following resources;
 
 <BlogImage
+  extendWidth
   client:load
   caption="AWS Serverless Architecture Diagram"
   alt="Serverless Framework converting code into product"
@@ -324,6 +325,7 @@ serverless deploy --env dev --stage qa
 - **–-stage** → enables deploying to specific environment only
 
 <BlogImage
+  extendWidth
   client:load
   alt="deploy your code with serverless"
   caption="Deploy logs with aws serverless"
@@ -343,6 +345,7 @@ The above command removes all AWS resources used in your application. Adding “
 Below are the metrics as shown by CloudWatch in the AWS console, after invoking each lambda 500 times via Postman.
 
 <BlogImage
+  extendWidth
   client:load
   alt="aws lambda results"
   caption="AWS Lambda Performance"
