--- a/src/content/posts/ssl-beanstalk-single-instance.mdx
+++ b/src/content/posts/ssl-beanstalk-single-instance.mdx
@@ -13,6 +13,8 @@ tags:
   - certbot
 ---
 
+import { BlogImage } from "../../components/blog";
+
 SSL secures data transfer between the client and the server-side. Not only that, it also increases your website’s Google ranking, so it’s the say that SSL certificates are a _MUST_ have when building applications.
 
 AWS provides a very convenient solution called “AWS Certificate Manager” (ACM). It provides _free_ public SSL certificates that you can connect to your load balanced Elastic Beanstalk (EB) instances.
@@ -29,9 +31,12 @@ Well, that’s mildly annoying 😒 but don’t worry we can still provision a f
 
 The first step is to say goodbye to your load balancer. Convert your instance type to `single instance` from “load balanced.” You can do this from the _Capacity_ tab inside _Configurations_. Just choose single instance in the environment type and that’s it.
 
-<img
-  src="/static/post-images/ssl-beanstalk-single-instance/beanstalk-config-screen.png"
+<BlogImage
+  client:load
+  extendWidth
   alt="Elastic Beanstalk Configuration Tab"
+  caption="Elastic Beanstalk Configuration Tab"
+  src="/static/post-images/ssl-beanstalk-single-instance/beanstalk-config-screen.png"
 />
 
 ## 2. Certbot
@@ -142,9 +147,12 @@ Now all you have to do is deploy your code to Elastic Beanstalk. Make sure that 
 
 > Aaand Voilà!!! **A+** rating for your very own, free of cost SSL Certificate. You can test your SSL certificate at [ssllabs.com](https://www.ssllabs.com/ssltest/).
 
-<img
-  src="/static/post-images/ssl-beanstalk-single-instance/ssl-cert-results.png"
+<BlogImage
+  client:load
+  extendWidth
   alt="SSL Certificate Results"
+  caption="SSL Certificate Results"
+  src="/static/post-images/ssl-beanstalk-single-instance/ssl-cert-results.png"
 />
 
 ---
