--- a/src/content/posts/create-first-aws-billing-alarm.mdx
+++ b/src/content/posts/create-first-aws-billing-alarm.mdx
@@ -11,7 +11,7 @@ tags:
   - sns
 ---
 
-import { BlogImage } from "../../components/blog";
+import { Image } from "../../components/blog";
 
 Whether you’re a novice, just starting or a highly skilled AWS ninja, you need to keep an eye on those pesky AWS bills. AWS Billing is a very important and sometimes confusing part of AWS and if left unchecked can cause a lot of damage.
 
@@ -27,7 +27,7 @@ Good question! Billing Alarm is a limit that you can set and AWS console lets yo
 
 Assuming you are logged into the console. Click on your **username** in the top right bar and select the **Billing Dashboard**. Alternately, you can also search for **billing** in the search bar, on the main page. On the left tab, under the **Preferences** section click **Billing preferences**.
 
-<BlogImage
+<Image
   client:load
   extendWidth
   alt="Preference Screen - AWS Console"
@@ -52,7 +52,7 @@ The **Create Alarm** button will take you to a setup wizard. There are four step
 
 In the first step, you can add the alarm’s name, currency, and conditions that trigger the alarm.
 
-<BlogImage
+<Image
   client:load
   extendWidth
   alt="Specify Metrics - AWS Console"
@@ -71,7 +71,7 @@ Complete the following steps;
 3.  Add your email address. You can add multiple email addresses separated by commas (,)
 4.  Press **Create topic**
 
-<BlogImage
+<Image
   client:load
   extendWidth
   alt="Creating SNS Topic - AWS Console"
