--- a/src/content/posts/getting-started-nestjs-and-sequilizejs.mdx
+++ b/src/content/posts/getting-started-nestjs-and-sequilizejs.mdx
@@ -11,7 +11,7 @@ tags:
   - typescript
 ---
 
-import { BlogImage } from "../../components/blog";
+import { Image } from "../../components/blog";
 
 ## Preface
 
@@ -189,7 +189,7 @@ The last step is to inject the _user service_ in our _user controller_. The cont
 
 ## Folder Structure
 
-<BlogImage
+<Image
   client:load
   alt="Folder structure"
   caption="Folder structure"
