--- a/src/content/posts/aws-to-cloudflare-domain-transfer-guide.mdx
+++ b/src/content/posts/aws-to-cloudflare-domain-transfer-guide.mdx
@@ -1,116 +1,86 @@
 ---
-title: "Domain Migration: Moving from AWS to Cloudflare"
-description: "Learn how to transfer your domain from AWS to Cloudflare and deploy your Astro site with step-by-step instructions that save time and prevent common pitfalls."
-image: "/static/feature-images/aws-cloudflare-migration-feature-image.jpeg"
-date: "Mar 15 2025"
-status: "draft"
+title: "Transferring My Domain from AWS to Cloudflare and Hosting My Astro Blog"
+description: "My experience on transferring an AWS-registered domain to Cloudflare and deploying an Astro-built blog to Cloudflare Pages."
+image: ""
+date: March 15, 2025
+status: "published"
 tags:
-  - aws
-  - cloudflare
-  - domain-management
-  - astro
-  - web-hosting
-  - cloud-services
+  - Cloudflare
+  - AWS
+  - Domain Transfer
+  - Astro
+  - Web Hosting
+  - DevOps
 ---
 
-import { Callout, Accordion } from "../../components/blog";
+import { Callout } from "../../components/blog";
 
-## Why I Moved My Domain from AWS to Cloudflare
-
-I recently decided to transfer my domain from AWS to Cloudflare to test their services and explore features like DDoS protection. As a developer who manages several personal projects, I'm always looking for the most efficient and cost-effective solutions for domain management and hosting.
-
-In this guide, I'll walk you through the exact process I used to transfer my domain from AWS to Cloudflare and deploy my Astro-built blog. By following these steps, you'll avoid the confusion and technical hiccups I encountered along the way.
+I decided to transfer my domain from AWS to Cloudflare to test their services. Here's my experience transferring the domain and deploying my Astro blog.
 
 ## Domain Transfer Process: AWS to Cloudflare
 
-The domain transfer process involves steps on both the AWS and Cloudflare sides. Let's break it down into manageable steps.
+### Step 1: Prepare Your Domain in AWS
 
-### Preparing Your Domain in AWS
-
-1. Log in to your AWS account and navigate to Route53.
-2. Locate your domain in the "Registered domains" section.
-3. Disable the Transfer Lock feature (look for "Transfer Lock: On" and change it to Off).
-4. Wait for the transfer lock to deactivate completely (this takes a few seconds).
-5. Click on the "Transfer out" dropdown menu and select "Transfer to another registrar."
-6. Note down the Authorization Code provided – you'll need this for Cloudflare.
-7. Remove the WHOIS privacy protection (while not strictly necessary, this can prevent complications with some registrars).
+1. Log into your AWS account and navigate to Route53
+2. Find your domain in the "Registered domains" section
+3. Disable the "Transfer Lock" feature through the "Actions" dropdown (may take a few seconds)
+4. Select "Transfer to another registrar" from the "Transfer out" dropdown
+5. Save the Authorization Code. You will need it later.
+6. Remove WHOIS privacy protection (optional but recommended to avoid potential transfer issues)
 
 <Callout client:load type="info">
-  AWS regularly updates their UI, so specific button locations may change. Focus
-  on finding these functions rather than looking for exact visual matches with
-  this guide.
+  AWS will definitely update their UI over time, so I am not sharing screenshots
+  of the process. The core functionalities should remain available, though their
+  exact location might change.
 </Callout>
 
-### Initiating the Transfer in Cloudflare
+### Step 2: Initiate Transfer in Cloudflare
 
-1. Log in to your Cloudflare account and navigate to "Domain Registration."
-2. Go to the "Transfer domain" section.
-3. If you don't see the option to add a domain, try hard refreshing the page with <kbd>CMD</kbd> + <kbd>SHIFT</kbd> + <kbd>R</kbd> (or <kbd>CTRL</kbd> + <kbd>SHIFT</kbd> + <kbd>R</kbd> on Windows).
-4. Enter your domain name when prompted.
-5. Select "Quick Scan for DNS records" when asked how to handle DNS records.
-6. Choose your plan (the Free plan works for most personal projects).
-7. Continue to the activation page, where Cloudflare will provide instructions for nameserver changes.
+1. Log into Cloudflare and go to "Domain Registration"
+2. If transfer options aren't visible, try hard refreshing (<kbd>⌘</kbd> + <kbd>SHIFT</kbd> + <kbd>R</kbd> for Macs or <kbd>Ctrl</kbd> + <kbd>SHIFT</kbd> + <kbd>R</kbd> for Windows)
+3. Select "Transfer a domain you own" and enter your domain
+4. Choose "Quick Scan for DNS records". This will scan your domain for existing records and provide a list of records to transfer.
+5. Select your plan and remove any conflicting DNS records
+6. Continue to activation
+
+### Step 3: Complete Transfer and Wait
+
+1. Update nameservers and disable DNSSEC if required (this was already disabled for me in the AWS Dashboard)
+2. Enter the AWS authorization code
+3. Verify your contact details and payment information
+4. Confirm and finalize the transfer
+5. Watch for the AWS confirmation email (usually arrives within minutes)
+6. Approve the transfer immediately to expedite the process
+7. Without approval, transfers can take up to 5 days
+
+## Deploying an Astro Blog to Cloudflare Pages
+
+While waiting for the domain transfer to complete, you can get a head start on deploying your Astro blog:
+
+### Deploy and Connect
+
+1. Go to "Workers & Pages" → "Pages" in Cloudflare
+2. Connect to GitHub and select your Astro repository
+3. Choose "Astro" from Framework presets (this configures build settings)
+4. Click "Deploy" to start the build process
+5. After deployment, go to "Custom domains" and add your domain
+6. Add the provided CNAME value to your DNS records
+7. Return to Pages and click "Activate domain"
+
+<Callout client:load type="info">
+  Even if your domain hasn't fully transferred yet, you can still set up the
+  Pages configuration. The connection will activate once the transfer completes.
+</Callout>
+
+## Verification and Next Steps
+
+Domain activation usually happens quickly but can take up to 48 hours. If your site doesn't appear, try checking in a different browser to avoid cache issues.
 
 <Callout client:load type="success">
-  If you encounter issues with existing CNAME records showing up, you may need
-  to delete the domain from Cloudflare and start again, ensuring all previous
-  records are cleared.
+  Success! While my main browser showed caching issues, testing in a fresh
+  browser session confirmed both the domain transfer and deployment worked.
 </Callout>
 
-### Completing the Transfer
+Now that everything is on Cloudflare, I'll explore their DDoS protection, CDN performance, and security features. This migration gives me a perfect testing ground for Cloudflare's ecosystem while maintaining my blog.
 
-1. Navigate to "Transfer a domain you own" option in Cloudflare.
-2. Enter your domain and review the transfer fee that Cloudflare will charge.
-3. Enter the authorization code you received from AWS.
-4. Verify your contact details, address, and payment information.
-5. Click "Confirm and Finalize Transfer" to complete the process.
-6. Watch for emails from both AWS and Cloudflare regarding the transfer.
-7. Respond to the AWS email (usually arrives within minutes) to approve and expedite the transfer.
-
-<Callout client:load type="danger">
-  Without your explicit approval, domain transfers can take up to 5 days.
-  Responding to the AWS confirmation email speeds up the process significantly.
-</Callout>
-
-## Deploying an Astro Site to Cloudflare Pages
-
-While waiting for the domain transfer to complete, you can go ahead and deploy your website to Cloudflare Pages.
-
-### Connecting Your GitHub Repository
-
-1. Navigate to the "Workers & Pages" tab in your Cloudflare dashboard.
-2. Select the "Pages" tab.
-3. Click on "Connect to Git" and authorize GitHub when prompted.
-4. Select the repository containing your Astro project.
-5. Choose "Astro" as the Framework preset to apply recommended build settings.
-6. Click "Deploy" to start the deployment process.
-
-### Setting Up Your Custom Domain
-
-1. Once deployment completes, go to the "Custom domains" tab.
-2. Add the domain you're transferring to Cloudflare.
-3. Note the CNAME value provided by Cloudflare.
-4. Navigate to "Account Home" from the side menu and select your domain.
-5. Update the DNS records by adding the CNAME with the values provided.
-6. Return to the Pages section, find the custom domain tab, and click "Activate domain."
-7. Wait for the domain to activate (usually a few minutes, though Cloudflare says it may take up to 48 hours).
-
-<Callout client:load type="info">
-  If your site isn't immediately accessible after domain activation, try
-  accessing it in an incognito window or a different browser to rule out caching
-  issues.
-</Callout>
-
-<Accordion client:load heading="Key Takeaways from This Migration">
-
-1. Domain transfers require disabling security features on the sending side before initiating the transfer.
-2. Authorization codes are essential for domain transfers and are provided by your current registrar.
-3. Responding quickly to confirmation emails significantly speeds up the transfer process.
-4. DNS record conflicts can occur if you've previously attempted to add your domain to Cloudflare.
-5. Browser caching can make it appear that domain transfers or DNS changes haven't taken effect when they actually have.
-
-</Accordion>
-
-This entire process took me less than a day to complete, though your experience may vary depending on how quickly your registrar processes the transfer. The deployment to Cloudflare Pages was particularly smooth thanks to their built-in support for Astro projects.
-
-Have you migrated domains between providers before? What challenges did you encounter that weren't covered in this guide?
+Have you tried Cloudflare? Which features do you find most useful?
