--- a/src/content/posts/create-first-aws-billing-alarm.mdx
+++ b/src/content/posts/create-first-aws-billing-alarm.mdx
@@ -5,10 +5,10 @@ image: "/static/feature-images/first-aws-billing-alarm-feature-image.jpeg"
 date: "Sep 09 2019"
 status: "published"
 tags:
-  - aws
-  - billing-alarm
-  - cloudwatch
-  - sns
+  - AWS
+  - Billing
+  - CloudWatch
+  - SNS
 ---
 
 import { Image } from "../../components/blog";
