--- a/src/content/posts/full-height-gatsby-site.mdx
+++ b/src/content/posts/full-height-gatsby-site.mdx
@@ -9,8 +9,8 @@ image: "/static/feature-images/full-height-gatsby-feature-image.jpeg"
 date: "2019-07-10"
 status: "published"
 tags:
-  - gatsbyjs
-  - css
+  - GatsbyJS
+  - CSS
 ---
 
 import { Image } from "../../components/blog";
