--- a/src/content/posts/serverless-apis-on-the-go.mdx
+++ b/src/content/posts/serverless-apis-on-the-go.mdx
@@ -5,14 +5,13 @@ status: published
 image: "/static/feature-images/prod-ready-server-api-feature-image.jpeg"
 description: "The Serverless Framework is an open source toolbox which enables developers to create, package and deploy their codebase on any cloud platform, in any language."
 tags:
-  - serverless
-  - aws
-  - nodejs
-  - expressjs
-  - sequelizejs
-  - mysql
-  - serverless-framework
-  - aws-lambda
+  - AWS
+  - NodeJS
+  - ExpressJS
+  - SequelizeJS
+  - MySQL
+  - Serverless Framework
+  - AWS Lambda
 categories:
   - blog-post
 ---
