--- a/src/content/posts/ssl-beanstalk-single-instance.mdx
+++ b/src/content/posts/ssl-beanstalk-single-instance.mdx
@@ -5,12 +5,12 @@ status: published
 image: "/static/feature-images/ssl-cert-beanstalk-feature-image.jpeg"
 description: "AWS provides a very convenient solution called “AWS Certificate Manager” (ACM). It provides free public SSL certificates that you can connect to your load balanced Elastic Beanstalk (EB) instances. Apparently, ACM requires a load balancer (or CloudFront distribution). It’s not possible to use the certificate with an instance directly."
 tags:
-  - aws
-  - elastic-beanstalk
-  - ssl-certificate
-  - aws-certificate-manager
-  - route53
-  - certbot
+  - AWS
+  - Elastic Beanstalk
+  - SSL Certificate
+  - AWS Certificate Manager
+  - Route53
+  - Certbot
 ---
 
 import { Image } from "../../components/blog";
