--- a/src/content/posts/getting-started-nestjs-and-sequilizejs.mdx
+++ b/src/content/posts/getting-started-nestjs-and-sequilizejs.mdx
@@ -5,10 +5,10 @@ status: published
 image: "/static/feature-images/nestjs-sequelize-feature-image.jpeg"
 description: "Coming from Laravel, which has a myriad of built-in features I started to resent shifting to NodeJS. Setting up error handling, logging, dependency injection, etc. was not what I had in mind. Thankfully I found NestJS, with its out-of-the-box architecture and great documentation I started feeling at home again."
 tags:
-  - nestjs
-  - sequelizejs
-  - nodejs
-  - typescript
+  - NestJS
+  - SequelizeJS
+  - NodeJS
+  - TypeScript
 ---
 
 import { Image } from "../../components/blog";
